# deploy-it

./: .run-this.sh.swp  README.md  run-this-mac.sh  run-this.sh
.github/workflows/: blank.yml  macos.yml
Projects/afkbot/: Cargo.toml  build_output.txt  check_output.txt
Projects/afkbot/src/: behavior.rs  chat.rs  handler.rs  main.rs  state.rs
Projects/auto_doc/: .docs_rs.txt.swp  Cargo.toml  azalea_rs.txt  burn_rs.txt  crabchess_rs.txt  docs_rs.txt  headless_chrome_rs.txt  thirtyfour_rs.txt
Projects/auto_doc/src/: main.rs
Projects/chess_engine/: Cargo.toml
Projects/chess_engine/chess_ai/: Cargo.toml
Projects/chess_engine/chess_web/: Cargo.toml
Projects/cifar10/: Cargo.toml
Projects/cifar10/src/: data.rs  main.rs  model.rs
Projects/ep/: Cargo.toml  cargorun.txt  memory_dump.txt
Projects/ep/src/: main.rs  utils.rs
Projects/iris-burn/: Cargo.toml
Projects/iris-burn/src/: main.rs
Projects/learn-burn/: Cargo.toml
Projects/learn-burn/src/: main.rs
Projects/mc-azal/: Cargo.toml
Projects/mnist/: Cargo.toml
Projects/mnist-burn/: Cargo.toml
Projects/model/: config.json  model.mpk
Projects/mymc-bot/: Cargo.toml
Projects/mymc-bot/.cargo/: config.toml
Projects/mymc-bot/src/: component.rs  handler.rs  main.rs  utils.rs
Projects/mymc-bot/src/bot/: chunk_eater.rs  component.rs  handler.rs  mod.rs
Projects/mymc-bot/src/plugins/: chunk_eater.rs  core.rs  master_commands.rs  mod.rs
Projects/tes/: Cargo.toml
Projects/videy-explorer/: Cargo.toml  list_videos.txt  session.json
Projects/xormodel_burn/: Cargo.toml
Projects/zoom/: Cargo.toml
(+36 files in other folders)
